Implemented sign_event method